# ga4-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/ga4-access/: SKILL.md
.claude/skills/ga4-health/: SKILL.md
.claude/skills/ga4-onboard/: SKILL.md
.claude/skills/ga4-ops/: SKILL.md
.claude/skills/ga4-ops/references/: api-endpoints.md  migration-patterns.md
.claude/skills/ga4-recipe-client-onboard/: SKILL.md
.claude/skills/ga4-recipe-site-audit/: SKILL.md
.claude/skills/ga4-reporting/: SKILL.md
.claude/skills/ga4-site-audit/: SKILL.md
docs/: AI_TRAFFIC_CHANNELS.md  BUILD_SUMMARY.md  OAUTH_IMPLEMENTATION.md  PLAN.md
src/ga4/: __init__.py  admin_client.py  async_client.py  bq_cli.py  bq_client.py  cache.py  channels_cli.py  checks.py  cli.py  client.py  config.py  errors.py  health_cli.py  report.py  scan_cli.py  schema_cli.py  shared.py  spider.py
tests/: conftest.py  test_bq.py  test_cli.py
