[project]
name = "ga4-cli"
version = "0.3.0"
description = "Google Analytics 4 property management, health diagnostics, schema replication, and reporting"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Mack" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "keyring>=24.0.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
ga4 = "ga4.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ga4"]

[tool.forma]
description = "Google Analytics 4 property management, health diagnostics, schema replication, and reporting"
resources = ["accounts", "properties", "reports", "dimensions", "metrics", "users", "health", "scan", "schema", "channels", "bq", "cache"]
auth = "oauth2"
origin = "forma"
status = "experimental"
install = "uv pip install -e ."
env-key = "GA4_CREDENTIALS_JSON"
api-url = "https://console.cloud.google.com/apis/credentials"
setup-notes = "Requires OAuth2 credentials JSON from Google Cloud Console"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
